Changed: bh_check_languages.php can now help to find strings which haven't been translated. Fixed: admin_forum_links.php reset button weren't being translated. Fixed: admin_make_style.php "this colour" and "new" weren't being translated. Added: Favourites checkbox and button to Guest MyForums with an error about needing to login. Added: img { vertical-align: middle } to all CSS files. Updated: Added missing strings as detailed above to language files and some changes to fr-ca from Jo.

--- a/forum/styles/make_style.css
+++ b/forum/styles/make_style.css
@@ -9,6 +9,10 @@ body {
     font-family: Verdana, Arial, Helvetica, sans-serif
 }
 
+img {
+    vertical-align: text-top;
+}
+
 frameset {
     border-style: none;
     margin:0;
